--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,7 +1,20 @@
 body {
-    font-family: Arial, sans-serif;
-    padding: 20px;
-    background-color: #f2f2f2;
+    background-color: #343a40; /* Cor de fundo escura */
+    color: #ffffff; /* Texto branco */
+}
+.card {
+    background-color: #495057; /* Cor do cartão */
+    height: 300px; /* Definindo uma altura fixa */
+}
+.card-img-top {
+    width: 100%; /* Largura total da carta */
+    height: 150px; /* Altura fixa para as imagens */
+    object-fit: cover; /* Corta a imagem para preencher o espaço */
+}
+.card-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between; /* Para distribuir o conteúdo */
 }
 
 nav {
