--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,20 +1,20 @@
 body {
-    background-color: #343a40; /* Cor de fundo escura */
-    color: #ffffff; /* Texto branco */
+    background-color: #343a40; 
+    color: #ffffff; 
 }
 .card {
-    background-color: #495057; /* Cor do cartão */
-    height: 300px; /* Definindo uma altura fixa */
+    background-color: #495057;
+    height: 300px; 
 }
 .card-img-top {
-    width: 100%; /* Largura total da carta */
-    height: 150px; /* Altura fixa para as imagens */
-    object-fit: cover; /* Corta a imagem para preencher o espaço */
+    width: 100%;
+    height: 150px; 
+    object-fit: cover; 
 }
 .card-body {
     display: flex;
     flex-direction: column;
-    justify-content: space-between; /* Para distribuir o conteúdo */
+    justify-content: space-between; 
 }
 
 nav {
@@ -33,7 +33,7 @@ nav a:hover {
 }
 
 .profissao {
-    background-color: #fff;
+    background-color: #000000;
     border: 1px solid #ccc;
     margin: 10px 0;
     padding: 10px;
